tests/snapshots/prompt_snapshot__options_seed_42_universal.snap
---
source: tests/prompt_snapshot.rs
assertion_line: 47
expression: sys
---
The engine has decided the mechanically available actions. Your job is to write the *text* of each option in the protagonist's voice.

<protagonist>
  <name>Quintus Wren</name>
  <background></background>
  <traits>Shrewd, Suspicious, Scholarly</traits>
  <mood>even</mood>
</protagonist>

<scene>
  <where>tavern</where>
  <time>night</time>
</scene>

<actions>
1. observe the room
2. open the notebook
3. wait here a while
</actions>

<instructions>
For each action above, write a single short line — a flash of inner thought or stated intent. First person. Period register. The line should sound like the protagonist's own self-narration, not a menu label. Keep each line under one short sentence; one clause is often enough. Do not invent new actions. Do not skip any. Preserve the order.
</instructions>

<output_format>
Call the `phrase_options` tool with an array of `lines`. The array MUST contain exactly one entry per action, in the same order as the `<actions>` block above.
</output_format>
